--- a/homework/hw_1-oct_14/hw_1.tex
+++ b/homework/hw_1-oct_14/hw_1.tex
@@ -44,7 +44,7 @@
 
 \lstnewenvironment{code}{%
   \lstset{
-  language=R,
+  language=Python,
   backgroundcolor=\color{verbgray},
   keywordstyle=\color{blue},      % keyword style
   commentstyle=\color{magenta},   % comment style
@@ -303,45 +303,73 @@ Finite element methods are based on these ``weak formulations'' of the problem. 
 \begin{enumerate}[\ \ (a)]
     \item
         Let $D^2$ be a finite difference formula for the secon derivative.  Then
-        \begin{align}
+        \begin{align*}
             (D^2u)_j &= au\qty(x - \frac{h}{2}) + bu\qty(x) + cu\qty(x + h) \\
             &= (a + b + c)u(x) + \qty(c - \frac{a}{2})hu'(x) + \qty(\frac{a}{8} + \frac{c}{2})h^2 u''(x) + \qty(\frac{c}{6} - \frac{a}{48})h^3u'''(x) + \dots
-        \end{align}
+        \end{align*}
         The letting $a + b + c = 0$, $c = \frac{a}{2}$ and $a = \frac{8}{3h^2}$, we get
-        \begin{align}
+        \begin{align*}
             (D^2u)_j &= u''(x) + \frac{h}{6}u'''(x) + \dots
-        \end{align}
+        \end{align*}
         where $a = \frac{8}{3h^2}$, $b = -\frac{4}{h^2}$, and $c = \frac{4}{3h^2}$.  Thus
-        \begin{align}
+        \begin{align*}
             (D^2 u)_j = \frac{8}{3h^2}u\qty(x - \frac{h}{2}) - \frac{4}{h^2}u(x) + \frac{4}{3h^2}u(x + h)
-        \end{align}
+        \end{align*}
         Note that $\dfrac{c}{6} - \frac{a}{48} = \frac{1}{6h^2}$ and thus the $u'''(x)$ term is order $h$.  This means $D^2$ has $\order{h}$ accuracy.
     \item
-        {\color{red}CODE}
+        Here is the Python (version 2.7) code used to plot absolute error of the approximation as a function of $h$.
+        \begin{code}
+from __future__ import division
+import numpy as np
+from math import exp
+import matplotlib.pyplot as plt
+
+x = 2
+true_val = exp(2)
+
+def approximation(h):
+    A = (8/(3*(h**2)))*exp(x - (h/2))
+    B = (4/(h**2))*exp(x)
+    C = (4/(3*(h**2)))*exp(x + h)
+    return A - B + C
+
+h = np.linspace(1, 0.01, 100)
+approx_vals = [approximation(H) for H in h]
+errors = [abs(i - true_val) for i in approx_vals]
+
+plt.figure()
+plt.plot(h, errors, "--", label="absolute error")
+plt.plot(h, (1/6)*h*exp(x), label=r"$\frac{1}{6}e^2h$")
+plt.legend(loc=0)
+plt.xlabel(r"$h$")
+plt.ylabel("absolute error")
+plt.savefig("problem_3.png", dpi=300)
+plt.close()
+        \end{code}
+        Below is the outcome of the analysis.  Notice the plot is asymptotically linear near $0$.  The $\order{h}$ term in the Taylor expansion is plotted for reference.
+        \begin{figure}[ht!]
+            \centering
+            \includegraphics[scale=0.5]{problem_3.png}
+        \end{figure}
+    \pagebreak
     \item
         The polynomial through the points
-        \begin{align}
+        \begin{align*}
             (x,u(x)) \qquad (x + h, u(x+h)) \qquad \qty(x - \frac{h}{2}, u\qty(x - \frac{h}{2}))
-        \end{align}
+        \end{align*}
         satisfies
-        \begin{align}
+        \begin{align*}
             u(x) &= A + Bx + Cx^2 \\
             u(x+h) &= A + B(x+h) + C(x+h)^2 \\
             u\qty(x - \frac{h}{2}) &= A + B\qty(x - \frac{h}{2}) + C\qty(x - \frac{h}{2})^2
-        \end{align}
+        \end{align*}
         This is a simple linear algebra problem that can be solved symbolically using a symbolic solver like Maple or Python.  We get:
-        \begin{align}
+        \begin{align*}
             A &= \frac{1}{3 h^{2}} \left(3 h^{2} u(x) + 4 h u\qty(x - \frac{h}{2}) x - 3 h u(x) x - h u\qty(x + h) x + 4 u\qty(x - \frac{h}{2}) x^{2} - 6 u(x) x^{2} + 2 u\qty(x + h) x^{2}\right) \\
             B &= -\frac{1}{3 h^{2}} \left(4 h u\qty(x - \frac{h}{2}) - 3 h u(x) - h u\qty(x + h) + 8 u\qty(x - \frac{h}{2}) x - 12 u(x) x + 4 u\qty(x + h) x\right) \\
             C &= \frac{2}{3 h^{2}} \left(2 u\qty(x - \frac{h}{2}) - 3 u(x) + u\qty(x + h)\right)
-        \end{align}
-        Then note that $u''(x) = 2C = \dfrac{8}{3h^2}u\qty(x - \dfrac{h}{2}) - \dfrac{4}{h^2}u(x) + \dfrac{4}{3h^2}u\qty(x + h)$, which exactly matches with the finite difference formula from part (a).  This means the best possible second derivative approximation using three points is precisely the quadratic through those points.
-        % Substituting these values back into $u(x) = A + Bx + Cx^2$ yields
-        % \begin{align}
-        %     u(x) &= \frac{1}{3 h^{2}} \left(3 h^{2} u(x) + 4 h u\qty(x - \frac{h}{2}) x - 3 h u(x) x - h u\qty(x + h) x + 4 u\qty(x - \frac{h}{2}) x^{2} - 6 u(x) x^{2} + 2 u\qty(x + h) x^{2}\right) \\
-        %     &\qquad -\frac{1}{3 h^{2}} \left(4 h u\qty(x - \frac{h}{2}) - 3 h u(x) - h u\qty(x + h) + 8 u\qty(x - \frac{h}{2}) x - 12 u(x) x + 4 u\qty(x + h) x\right)x \\
-        %     &\qquad +\frac{2}{3 h^{2}} \left(2 u\qty(x - \frac{h}{2}) - 3 u(x) + u\qty(x + h)\right)x^2
-        % \end{align}
+        \end{align*}
+        Then note that since $u(x) = A + Bx + Cx^2$, then $u''(x) = 2C = \dfrac{8}{3h^2}u\qty(x - \dfrac{h}{2}) - \dfrac{4}{h^2}u(x) + \dfrac{4}{3h^2}u\qty(x + h)$, which exactly matches with the finite difference formula from part (a).  This means the best possible second derivative approximation using three points is precisely the quadratic function through those points.
 \end{enumerate}
 
 \end{document}
