--- a/homework/hw_1-oct_14/hw_1.tex
+++ b/homework/hw_1-oct_14/hw_1.tex
@@ -47,6 +47,7 @@
   language=Python,
   backgroundcolor=\color{verbgray},
   keywordstyle=\color{blue},      % keyword style
+  keywordstyle=[2]\color{blue},   % keyword style
   commentstyle=\color{magenta},   % comment style
   stringstyle=\color{olive},      % string literal styleframe=single,
   numberstyle=\color{black},      % string literal styleframe=single,
@@ -317,7 +318,7 @@ Finite element methods are based on these ``weak formulations'' of the problem. 
         \end{align*}
         Note that $\dfrac{c}{6} - \frac{a}{48} = \frac{1}{6h^2}$ and thus the $u'''(x)$ term is order $h$.  This means $D^2$ has $\order{h}$ accuracy.
     \item
-        Here is the Python (version 2.7) code used to plot absolute error of the approximation as a function of $h$.
+        I tested the accuracy of the second derivative of the function $f(x) = e^x$ at the point $x = 2$.  Below is the Python (version 2.7.x) code used to plot absolute error of the approximation as a function of $h$.
         \begin{code}
 from __future__ import division
 import numpy as np
@@ -363,7 +364,7 @@ plt.close()
             u(x+h) &= A + B(x+h) + C(x+h)^2 \\
             u\qty(x - \frac{h}{2}) &= A + B\qty(x - \frac{h}{2}) + C\qty(x - \frac{h}{2})^2
         \end{align*}
-        This is a simple linear algebra problem that can be solved symbolically using a symbolic solver like Maple or Python.  We get:
+        This is a simple linear algebra problem that can be solved symbolically using a symbolic solver like Maple or Python (\texttt{sympy} package).  We get:
         \begin{align*}
             A &= \frac{1}{3 h^{2}} \left(3 h^{2} u(x) + 4 h u\qty(x - \frac{h}{2}) x - 3 h u(x) x - h u\qty(x + h) x + 4 u\qty(x - \frac{h}{2}) x^{2} - 6 u(x) x^{2} + 2 u\qty(x + h) x^{2}\right) \\
             B &= -\frac{1}{3 h^{2}} \left(4 h u\qty(x - \frac{h}{2}) - 3 h u(x) - h u\qty(x + h) + 8 u\qty(x - \frac{h}{2}) x - 12 u(x) x + 4 u\qty(x + h) x\right) \\
