--- a/notes/Oct_18/Oct_18.tex
+++ b/notes/Oct_18/Oct_18.tex
@@ -132,6 +132,7 @@
                 \vec{b} \\ \hdashline[2pt/2pt] 0
             \end{array})
         \end{align}
+        (block matrix).
 
     \section{2D Equation}
         \begin{align}
